--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         node-version: 16
 
+    - name: Change to app directory
+      run: cd visualizecode-app
+
     - name: Install dependencies
       run: npm install
 
@@ -28,4 +31,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./visualizecode-app/build
