--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Change to app directory
+      run: cd ./visualizecode-app
+
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 16
-
-    - name: Change to app directory
-      run: cd visualizecode-app
 
     - name: Install dependencies
       run: npm install
