--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Change to app directory
-      run: cd ./visualizecode-app
+      run: cd visualizecode-app
 
     - name: Install Node.js
       uses: actions/setup-node@v3
