--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,14 @@ jobs:
           cache-dependency-path: visualizecode-app/package.json
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
         working-directory: visualizecode-app
+        shell: bash
 
       - name: Build the project
         run: npm run build
