--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,16 @@ jobs:
 
       - name: Install dependencies
         run: |
-          if [ -f package-lock.json ]; then
-            npm ci
+          if [ -f visualizecode-app/package-lock.json ]; then
+            npm --prefix visualizecode-app ci
           else
-            npm install
+            npm --prefix visualizecode-app install
           fi
-        working-directory: visualizecode-app
         shell: bash
 
       - name: Build the project
-        run: npm run build
-        working-directory: visualizecode-app
+        run: npm --prefix visualizecode-app run build
+        shell: bash
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
