--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,3 +40,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: visualizecode-app/build
+          publish_branch: gh-pages
+          force_orphan: true
+          keep_files: false
